--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
 disnake~=2.8.1
-flask~=2.3.2
 python-dotenv~=1.0.0
+Flask~=2.3.2
+youtube-dl @ git+https://github.com/ytdl-org/youtube-dl.git@master#egg=youtube_dl
